--- a/q/10695.html
+++ b/q/10695.html
@@ -26,34 +26,42 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>8829</td><td>JavaScript Node.js / brainfuck</td><td>240807T232806Z</td><td><a href="https://codegolf.stackexchange.com/questions/10695/build-a-polyglot-for-hello-world/274773#274773">Andrew B</a></td></tr>
-<tr d-ix="1"><td>nan</td><td>TIBASIC and Pyth</td><td>160203T030406Z</td><td><a href="https://codegolf.stackexchange.com/questions/10695/build-a-polyglot-for-hello-world/70863#70863">Arcturus</a></td></tr>
-<tr d-ix="2"><td>nan</td><td></td><td>200227T184834Z</td><td><a href="https://codegolf.stackexchange.com/questions/10695/build-a-polyglot-for-hello-world/200233#200233">USERNAME</a></td></tr>
-<tr d-ix="3"><td>227</td><td>Madbrain and [insert most BF derivatives here]</td><td>190831T110654Z</td><td><a href="https://codegolf.stackexchange.com/questions/10695/build-a-polyglot-for-hello-world/191113#191113">Sagittar</a></td></tr>
-<tr d-ix="4"><td>088</td><td>ES8</td><td>171024T135338Z</td><td><a href="https://codegolf.stackexchange.com/questions/10695/build-a-polyglot-for-hello-world/146219#146219">user7520</a></td></tr>
-<tr d-ix="5"><td>nan</td><td>JavaScript ES6</td><td>160202T230737Z</td><td><a href="https://codegolf.stackexchange.com/questions/10695/build-a-polyglot-for-hello-world/70835#70835">Conor O&</a></td></tr>
-<tr d-ix="6"><td>nan</td><td>CoffeeScript and CJam</td><td>160202T121725Z</td><td><a href="https://codegolf.stackexchange.com/questions/10695/build-a-polyglot-for-hello-world/70763#70763">username</a></td></tr>
-<tr d-ix="7"><td>nan</td><td></td><td>131231T004314Z</td><td><a href="https://codegolf.stackexchange.com/questions/10695/build-a-polyglot-for-hello-world/16890#16890">Timtech</a></td></tr>
-<tr d-ix="8"><td>nan</td><td></td><td>130219T010818Z</td><td><a href="https://codegolf.stackexchange.com/questions/10695/build-a-polyglot-for-hello-world/10720#10720">gnibbler</a></td></tr>
-<tr d-ix="9"><td>nan</td><td></td><td>130220T101952Z</td><td><a href="https://codegolf.stackexchange.com/questions/10695/build-a-polyglot-for-hello-world/10729#10729">Howard</a></td></tr>
+<tr d-ix="0"><td>nan</td><td>Setanta & Vyxal 3</td><td>240810T053509Z</td><td><a href="https://codegolf.stackexchange.com/questions/10695/build-a-polyglot-for-hello-world/274874#274874">bb94</a></td></tr>
+<tr d-ix="1"><td>8829</td><td>JavaScript Node.js / brainfuck</td><td>240807T232806Z</td><td><a href="https://codegolf.stackexchange.com/questions/10695/build-a-polyglot-for-hello-world/274773#274773">Andrew B</a></td></tr>
+<tr d-ix="2"><td>nan</td><td>TIBASIC and Pyth</td><td>160203T030406Z</td><td><a href="https://codegolf.stackexchange.com/questions/10695/build-a-polyglot-for-hello-world/70863#70863">Arcturus</a></td></tr>
+<tr d-ix="3"><td>nan</td><td></td><td>200227T184834Z</td><td><a href="https://codegolf.stackexchange.com/questions/10695/build-a-polyglot-for-hello-world/200233#200233">USERNAME</a></td></tr>
+<tr d-ix="4"><td>227</td><td>Madbrain and [insert most BF derivatives here]</td><td>190831T110654Z</td><td><a href="https://codegolf.stackexchange.com/questions/10695/build-a-polyglot-for-hello-world/191113#191113">Sagittar</a></td></tr>
+<tr d-ix="5"><td>088</td><td>ES8</td><td>171024T135338Z</td><td><a href="https://codegolf.stackexchange.com/questions/10695/build-a-polyglot-for-hello-world/146219#146219">user7520</a></td></tr>
+<tr d-ix="6"><td>nan</td><td>JavaScript ES6</td><td>160202T230737Z</td><td><a href="https://codegolf.stackexchange.com/questions/10695/build-a-polyglot-for-hello-world/70835#70835">Conor O&</a></td></tr>
+<tr d-ix="7"><td>nan</td><td>CoffeeScript and CJam</td><td>160202T121725Z</td><td><a href="https://codegolf.stackexchange.com/questions/10695/build-a-polyglot-for-hello-world/70763#70763">username</a></td></tr>
+<tr d-ix="8"><td>nan</td><td></td><td>131231T004314Z</td><td><a href="https://codegolf.stackexchange.com/questions/10695/build-a-polyglot-for-hello-world/16890#16890">Timtech</a></td></tr>
+<tr d-ix="9"><td>nan</td><td></td><td>130219T010818Z</td><td><a href="https://codegolf.stackexchange.com/questions/10695/build-a-polyglot-for-hello-world/10720#10720">gnibbler</a></td></tr>
+<tr d-ix="10"><td>nan</td><td></td><td>130220T101952Z</td><td><a href="https://codegolf.stackexchange.com/questions/10695/build-a-polyglot-for-hello-world/10729#10729">Howard</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a> / <a href="https://github.com/TryItOnline/brainfuck" rel="nofollow noreferrer">brainfuck</a> , score: 88.29</h1>
+<div id="pu0" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a> &amp; <a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, score = 37.840338686417155 (45 bytes)</h1>
+<pre><code>&gt;--&quot;Hello World!&quot;,#Q(
+scriobh(&quot;Hello World!&quot;)
+</code></pre>
+<p><a href="https://vyxal.github.io/latest.html#WyIiLCIiLCI+LS1cIkhlbGxvIFdvcmxkIVwiLCNRKFxuc2NyaW9iaChcIkhlbGxvIFdvcmxkIVwiKSIsIiIsIiIsIjMuNC4yIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
+<p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgIDIyOWWCw" rel="nofollow noreferrer">try-setanta.ie link</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a> / <a href="https://github.com/TryItOnline/brainfuck" rel="nofollow noreferrer">brainfuck</a> , score: 88.29</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>console['log'](&quot;Hello, World!&quot;)+&quot;[--&gt;-[&gt;&gt;+&gt;-----&lt;&lt;]&lt;--&lt;---]&gt;-.&gt;&gt;&gt;+.&gt;&gt;..+++[.&gt;]&lt;&lt;&lt;&lt;.+++.------.&lt;&lt;-.&gt;&gt;&gt;&gt;+.&quot;
 </code></pre>
 <p><a href="https://tio.run/##HYpBCoQwDEWvot3UIZOcIGQ9N3BRuhAtogQjKl6/E32Lx@fz1uEezvFY9gs3m0qto22naUlRbY65C7@iat@mt0OnNnwgJETBJAKCD8yZ3b6yIIn/LiIASCSZnWfT2yIxv41HodY/" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online (JavaScript)</a></p>
 <p><a href="https://tio.run/##HYo7CoBADAWvotuoxOQEIbU3sFi28I8YDCief41OMTweM17Dfq7PdOQ82XmbLrFS26pUh25Rtbbo7dK5DA2EiCgYRUDwgzmx21cSJPHfRQQAkSSx8236WyTmv/Eo5PwC" rel="nofollow noreferrer" title="brainfuck – Try It Online">Try it online (brainfuck) </a></p>
 </div>
-<div id="pu1" class="pu"><h1>TI-BASIC and Pyth, 13/2^((2-1)/4)=10.93</h1>
+<div id="pu2" class="pu"><h1>TI-BASIC and Pyth, 13/2^((2-1)/4)=10.93</h1>
 <pre><code>&quot;Hello World!
 </code></pre>
 </div>
-<div id="pu2" class="pu"><pre><code>puts "Hello world!"
+<div id="pu3" class="pu"><pre><code>puts "Hello world!"
 </code></pre>
 
 <p>Works in Ruby and Tcl</p>
 </div>
-<div id="pu3" class="pu"><h1>Madbrain and [insert most BF derivatives here], <s>272</s> 227 bytes</h1>
+<div id="pu4" class="pu"><h1>Madbrain and [insert most BF derivatives here], <s>272</s> 227 bytes</h1>
 
 <p>Just posting for fun, not to win c:</p>
 
@@ -104,12 +112,12 @@ g+11+g++*11
 
 <p>The code after <code>++++++[-]</code> is the code for printing <code>Hello World!</code>.</p>
 </div>
-<div id="pu4" class="pu"><h1>ES8, Japt, TeaScript, C#, C++, C, ESMin, score: ~8.8</h1>
+<div id="pu5" class="pu"><h1>ES8, Japt, TeaScript, C#, C++, C, ESMin, score: ~8.8</h1>
 <pre><code>main=_=&gt;&quot;Hello World!&quot;();
 </code></pre>
 <p>ES8, TeaScript and Japt see <code>&quot;Hello World!&quot;</code>.</p>
 </div>
-<div id="pu5" class="pu"><h1>JavaScript ES6, <a href="https://github.com/ConorOBrien-Foxx/Assorted-Programming-Languages/tree/master/oration">Oration</a>, <a href="https://github.com/VTCAKAVSMoACE/Vitsy">Vitsy</a>, <a href="http://play.starmaninnovations.com/minkolang/?code=">Minkolang</a> score = 71.94703045766462</h1>
+<div id="pu6" class="pu"><h1>JavaScript ES6, <a href="https://github.com/ConorOBrien-Foxx/Assorted-Programming-Languages/tree/master/oration">Oration</a>, <a href="https://github.com/VTCAKAVSMoACE/Vitsy">Vitsy</a>, <a href="http://play.starmaninnovations.com/minkolang/?code=">Minkolang</a> score = 71.94703045766462</h1>
 
 <p><code>121 / 2^(3/4)</code>. Fun fact? I'm not trying to win, just to add as many languages as possible.</p>
 
@@ -237,14 +245,14 @@ $$$  C this separates layers C
              .            C terminate program C
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h2>CoffeeScript and CJam, 46/2^((2-1)/4)=38.68</h2>
+<div id="pu7" class="pu"><h2>CoffeeScript and CJam, 46/2^((2-1)/4)=38.68</h2>
 
 <pre><code>e###
 "Hello, World!"
 e###alert "Hello, World!"
 </code></pre>
 </div>
-<div id="pu7" class="pu"><p><strong>Score of 0.84</strong></p>
+<div id="pu8" class="pu"><p><strong>Score of 0.84</strong></p>
 
 <pre><code>H
 </code></pre>
@@ -253,12 +261,12 @@ e###alert "Hello, World!"
 
 <p>1 / 2 ^ ((2 - 1) / 4) = <strong>0.84</strong></p>
 </div>
-<div id="pu8" class="pu"><pre><code>print("Hello World!")
+<div id="pu9" class="pu"><pre><code>print("Hello World!")
 </code></pre>
 
 <p>Works in at least  Julia, Perl, PHP, Python2, Python3, Qbasic, R, Ruby ...</p>
 </div>
-<div id="pu9" class="pu"><pre><code>'Hello World!'
+<div id="pu10" class="pu"><pre><code>'Hello World!'
 </code></pre>
 
 <p>Runs in several scripting languages, including PHP, GolfScript, APL, ...</p>
