--- a/q/141675.html
+++ b/q/141675.html
@@ -58,9 +58,9 @@
 <tr d-ix="29"><td>029</td><td>Python 2</td><td>170905T153202Z</td><td><a href="https://codegolf.stackexchange.com/questions/141675/when-do-i-get-my-sandwich/141677#141677">totallyh</a></td></tr>
 </table>
 <div id="pu0" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 54 bytes</h1>
-<pre><code>gniomh(s){toradh aimsigh@(roinn@&quot;emklact&quot;(&quot;&quot;))(s[3])}
+<pre><code>gniomh(s){toradh aimsigh@(roinn@&quot;enklact&quot;(&quot;&quot;))(s[3])}
 </code></pre>
-<p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgIDwpeiKCw" rel="nofollow noreferrer">try-setanta.ie link</a></p>
+<p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgIDQ_uKRCw" rel="nofollow noreferrer">try-setanta.ie link</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 20 bytes</h1>
 
