--- a/q/274690.html
+++ b/q/274690.html
@@ -26,12 +26,12 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>031</td><td>JavaScript Node.js</td><td>240809T093310Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274847#274847">tsh</a></td></tr>
-<tr d-ix="1"><td>038</td><td>Lua</td><td>240808T221837Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274824#274824">chunes</a></td></tr>
-<tr d-ix="2"><td>023</td><td>Julia</td><td>240805T185155Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274709#274709">Kirill L</a></td></tr>
-<tr d-ix="3"><td>120</td><td>Java JDK</td><td>240808T172230Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274813#274813">David Co</a></td></tr>
-<tr d-ix="4"><td>006</td><td>Stack control 1.1</td><td>240805T134633Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274702#274702">Швеев Ал</a></td></tr>
-<tr d-ix="5"><td>040</td><td>Javascript V8</td><td>240808T085636Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274799#274799">Bean Sea</a></td></tr>
+<tr d-ix="0"><td>nan</td><td>Javascript V8</td><td>240808T085636Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274799#274799">Bean Sea</a></td></tr>
+<tr d-ix="1"><td>031</td><td>JavaScript Node.js</td><td>240809T093310Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274847#274847">tsh</a></td></tr>
+<tr d-ix="2"><td>038</td><td>Lua</td><td>240808T221837Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274824#274824">chunes</a></td></tr>
+<tr d-ix="3"><td>023</td><td>Julia</td><td>240805T185155Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274709#274709">Kirill L</a></td></tr>
+<tr d-ix="4"><td>120</td><td>Java JDK</td><td>240808T172230Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274813#274813">David Co</a></td></tr>
+<tr d-ix="5"><td>006</td><td>Stack control 1.1</td><td>240805T134633Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274702#274702">Швеев Ал</a></td></tr>
 <tr d-ix="6"><td>081</td><td>Desmos</td><td>240807T110745Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274753#274753">Aiden Ch</a></td></tr>
 <tr d-ix="7"><td>033</td><td>gnuplot</td><td>240807T072811Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274751#274751">int 21h </a></td></tr>
 <tr d-ix="8"><td>015</td><td>J</td><td>240807T003850Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274744#274744">Jonah</a></td></tr>
@@ -65,33 +65,43 @@
 <tr d-ix="36"><td>016</td><td>APL Dyalog Unicode</td><td>240805T110728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274693#274693">Ad&#225;</a></td></tr>
 <tr d-ix="37"><td>006</td><td>Vyxal</td><td>240805T110401Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274691#274691">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 31 bytes</h1>
+<div id="pu0" class="pu"><h2><a href="https://v8.dev/" rel="nofollow noreferrer">Javascript (V8)</a>, <s>40 bytes</s></h2>
+<pre><code>a=&gt;a.reduce((x,y)=&gt;x+y**3,0)==a.join('')
+</code></pre>
+<p>where <strong>a</strong> is <em>number[]</em>, so it should work for any number of arguments.</p>
+<p><a href="https://tio.run/##y0osSyxOLsosKNEts/j/P9HWLlGvKDWlNDlVQ6NCp1LT1q5Cu1JLy1jHQNPWNlEvKz8zT0NdXfP/fwA" rel="nofollow noreferrer">Try it online!</a></p>
+<h2>33 bytes</h2>
+<p>Thanks @Neil and @tsh for the shorter version!</p>
+<pre><code>a=&gt;a.map(x=&gt;s-=x**3,s=a.join``)|s
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 31 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>(x,y,z)=&gt;[x]+y+z-x**3-y**3-z**3
 </code></pre>
 <p><a href="https://tio.run/##dY/NDoIwEITvPgk/g@kPLSUGX8R4IAhGQ6gRY4CXr8vFRFuSzRy@yc7u3Ot3PTbP2@OVDfbSuq5y0YQZS1wdT9M5ndMlm5JEZvMqC4lr7DDavt339hp1EYeCjOPD7hcLCPAAz8FQ@Jgz4myD80A8pRuo0ndKA0ETuqE1FGOQMvCXoSUlDfJC/Jt@EHULVlPQPtYbzb7f5IF6bO1NSpb7AA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>A boring trivial solution is short...</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.lua.org/" rel="nofollow noreferrer">Lua</a>, 38 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.lua.org/" rel="nofollow noreferrer">Lua</a>, 38 bytes</h1>
 
 <pre class="lang-lua prettyprint-override"><code>x,y,z=...print(x^3+y^3+z^3==0|x..y..z)
 </code></pre>
 <p><a href="https://tio.run/##yylN/P@/QqdSp8pWT0@voCgzr0SjIs5YuxKIq@KMbW0Nair09Cr19Ko0////b/jf9L8xAA" rel="nofollow noreferrer" title="Lua – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://julialang.org" rel="nofollow noreferrer">Julia</a>, <s>26</s> <s>24</s> 23 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://julialang.org" rel="nofollow noreferrer">Julia</a>, <s>26</s> <s>24</s> 23 bytes</h1>
 <pre><code>-n=&quot;$(n'n.^2)&quot;==join(n)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=PY9BCoMwEEX3OUWQQhXGEqOJcZGTBAuFKigyFo2n6caNZ-gVeoXepklshTC88CcvM8-tX4butq7bYttUvVLU0SnGM16uPIm07scOY0z29PO2zWxnqqkhJgMBeQ2UGA4cMofEFMCg9JAxR-ygzBN3XQpE5blSwN3Ze6UEwRjkeXAoF4hcQVHykDr5zy1AepCH-nhYBD_zX7nqLjVpx4la2iENI5PH1KEdME5tQhq87_v8t_4C" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Thanks to ovs for -2 and further -1 by Ashlin Harris.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="http://jdk.java.net/" rel="nofollow noreferrer">Java (JDK)</a>, 120 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="http://jdk.java.net/" rel="nofollow noreferrer">Java (JDK)</a>, 120 bytes</h1>
 
 <pre class="lang-java prettyprint-override"><code>t-&gt;t.stream().mapToInt(x-&gt;x*x*x).sum()==Integer.parseInt(t.stream().map(Object::toString).collect(Collectors.joining()))
 </code></pre>
 <p><a href="https://tio.run/##dVHBagIxFLzvV7xjtmCwSD2sulB6KrRYsLfSQ8zGJdtssiRvRSl@e/rcXWtFS07JzLyZeanEVoyq4ivqunEeIaBALaGiZ96iNjygV6LmT84YJdH5wNG96ICzZFCcqY/ei324AfzD37RWonaWv3lVaClQ3SBd@c@SpGnXhkJKI0KAV6EtfCcAw@vQYOt0ATVhbIVe2/LjE4QvQ9pRAY6R5s8WVal8DoZusIC@wGDJOjqvRcMGXpZthWnVcpNy2cdh/S5Yms66qb9F5hfzc5CuUKUzGzKJOMrx5NHNf3dEZLtRvrujk/LQErBYDGreCB/UkXGpYst1RRGyDF3f8Jzqz2dVTlvCKGEa@4yrfUBVc9cib0iGxrJTOo6KyhyX0Rc6JIcY76fT@DAex8lk8gM" rel="nofollow noreferrer" title="Java (JDK) – Try It Online">Try it online!</a></p>
 <p>I'm not sure if the import of <code>java.util.List</code> needs to be counted. The predicate takes a List and some old advice says that all the types for lambdas need to be included, with any imports, but in JShell it is imported by default and in JDK 23 (which is currently only a preview edition) you also get it for free in a Java program that is all in one file (you can even skip declaring a class or having a full public-static-void-main), but TIO doesn't support JShell or recent versions of Java.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/CREAsTIVE/StackControl/releases/tag/1.1" rel="nofollow noreferrer">Stack control 1.1</a>, 6 characters</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/CREAsTIVE/StackControl/releases/tag/1.1" rel="nofollow noreferrer">Stack control 1.1</a>, 6 characters</h1>
 <pre><code>:³+⇆◡=
 </code></pre>
 <h2>Explanation</h2>
@@ -102,12 +112,6 @@
 ◡  - reversed concatenates values from array
 =  - check if values are equals
 </code></pre>
-</div>
-<div id="pu5" class="pu"><h2><a href="https://v8.dev/" rel="nofollow noreferrer">Javascript (V8)</a>, 40 bytes</h2>
-<pre><code>a=&gt;a.reduce((x,y)=&gt;x+y**3,0)==a.join('')
-</code></pre>
-<p>where <strong>a</strong> is <em>number[]</em>, so it should work for any number of arguments.</p>
-<p><a href="https://tio.run/##y0osSyxOLsosKNEts/j/P9HWLlGvKDWlNDlVQ6NCp1LT1q5Cu1JLy1jHQNPWNlEvKz8zT0NdXfP/fwA" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
 <div id="pu6" class="pu"><h1><a href="https://desmos.com/calculator" rel="nofollow noreferrer">Desmos</a>, 81 bytes</h1>
 <pre><code>f(L)=total(10^{join([floor(log(L+0^L)+1)[i...].totalfori=[2...L.count]],0)}L-LLL)
