--- a/q/274854.html
+++ b/q/274854.html
@@ -26,11 +26,23 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>041</td><td>Charcoal</td><td>240809T235450Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274866#274866">Neil</a></td></tr>
-<tr d-ix="1"><td>016</td><td>Jelly</td><td>240809T183703Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274861#274861">Unrelate</a></td></tr>
-<tr d-ix="2"><td>090</td><td>JavaScript ES6</td><td>240809T162406Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274857#274857">Arnauld</a></td></tr>
+<tr d-ix="0"><td>035</td><td>APLDyalog Unicode</td><td>240810T143509Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274887#274887">akamayu</a></td></tr>
+<tr d-ix="1"><td>041</td><td>Charcoal</td><td>240809T235450Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274866#274866">Neil</a></td></tr>
+<tr d-ix="2"><td>016</td><td>Jelly</td><td>240809T183703Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274861#274861">Unrelate</a></td></tr>
+<tr d-ix="3"><td>090</td><td>JavaScript ES6</td><td>240809T162406Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274857#274857">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 41 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>35 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<p>A dfn that takes B and N as its left and right arguments, respectively. It outputs zero for true instances and non-zero output for false instances.</p>
+<pre><code>{⍺|+⌿⍺(+⌿⊥⍣¯1)⍣≡⍵×(⍺-1)(⊢÷∨)⍣≡⌽⍳≢⍵}
+                              ⌽⍳≢⍵  ⍝ Reversed indices of N
+                  (⍺-1)(⊢÷∨)⍣≡      ⍝ Divided by gcd with B-1 until converges
+                ⍵×                  ⍝ Multiplied by N
+     ⍺(+⌿⊥⍣¯1)⍣≡                    ⍝ Sum of digits in base B until converges
+ ⍺|+⌿                               ⍝ Sum in mod B
+</code></pre>
+<p><a href="https://razetime.github.io/APLgolf/?h=C1F41DZBofpRV3P1o95dOuoK6jqPerfW6j/qnXpoBVBEQT1NXQEoogAk2yYBSQ2QIBBDqK2atQA&amp;c=q37Uu6tG@1HPfiCtAaa7lj7qXXxovaEmkHrUufBR79bD0zWAsrqGmhqPuhYd3v6oYwVMrmfvo97NjzoXARXVAgA&amp;f=K1F41DZBIU0hhMvQSKFEwVDBRMEQwjQHcowUjIECpgpmQJ6FgqWCoYGCJVShAUySy9AQmW/B9ahvKtBMdV0CQB3JRgJ2GhqgWQK1FMI1VjAFAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 41 bytes</h1>
 <pre><code>¬﹪ΣＥθ∧ι⊕﹪⊖×ι⌈Φ⊕Ｅθμ∧¬﹪⁻Ｌθκλ⬤…²η∨﹪λν﹪⊖ην⊖ηη
 </code></pre>
 <p><a href="https://tio.run/##bY5Ba8JAEIX/yh4n8AomVq14EoogdK203kIOS7IkS3cnum5K//12U5VW6MDA8M17b6bulK97ZWPce8OBdn0g2TeD7el9cCTVkU4Qa27IQGy59tppDrq5iZ71LzoYp8@jTqov45J7Y2zQnu5sl0CXZZfUP/ek4eFML5rb0NEp7T9S2x@htfSmuNVUQHQJvPqbyUJwAv98M@o4uxbE/eoKx2EVY1kukKPAFI@YYY4FnrBEPsGyQl5U8eHTfgM" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs a Charcoal boolean, i.e. <code>-</code> if Luhn, nothing if not. Explanation: Mostly doing recursive GCD without having access to recursion or GCD.</p>
@@ -78,7 +90,7 @@
 </code></pre>
 <p>The recursive GCD of <code>I</code> and <code>B-1</code> is the highest factor of <code>I</code> that shares no common factor with <code>B-1</code>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 16 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 16 bytes</h1>
 <pre><code>J:g¥’}U×ḷb§¥ƬṪS%
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8/9/LKv3Q0kcNM2tDD09/uGN70qHlh5YeW/Nw56pg1f@Hl@trRv7/Hx0dbaijYKKjYBirY2gUq8MVHW2uY6hjpGOsY6JjqmOmY65joWOpY2igYwlXAORA5eFCyCKGEEUQU4kw2NAAu8mGSCYbw0ViAQ" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -96,7 +108,7 @@
                %    mod B.
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1>JavaScript (ES6), 90 bytes</h1>
+<div id="pu3" class="pu"><h1>JavaScript (ES6), 90 bytes</h1>
 <p>Expects <code>(base)(list)</code>. Returns zero for truthy or non-zero for falsy.</p>
 <p>Too many recursive functions...</p>
 
