--- a/q/113448.html
+++ b/q/113448.html
@@ -294,7 +294,8 @@
 <p><code>1&amp;++n</code></p>
 <p>or maybe</p>
 <p><code>~n&amp;1</code></p>
-<p>I presume <code>( )</code> for the 2nd version is superfluous since <code>~(n&amp;1)</code> and <code>(~n)&amp;1</code> should result in the same thing</p>
+<p>I presume <code>( )</code> for the 2nd version is superfluous since <code>~(n&amp;1)</code> and <code>(~n)&amp;1</code> should result in the same thing logically.</p>
+<p>The safe way to write that maybe <code>1&amp;~n</code> instead.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.uiua.org/pad?src=0_12_0-rc_1__IyAwIG1lYW5zIGV2ZW4sIDEgbWVhbnMgb2RkCuKXvzIgNAril78yIDMK4pe_MiA2NDc4OTAyMwo=" rel="nofollow noreferrer">Uiua</a>, 5 bytes, 3 characters</h1>
 <pre><code>◿2 
