--- a/q/235964.html
+++ b/q/235964.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>004</td><td>Vyxal 3</td><td>240810T063635Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274879#274879">bb94</a></td></tr>
-<tr d-ix="1"><td>012</td><td>Uiua</td><td>240810T062447Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274877#274877">Joonas</a></td></tr>
-<tr d-ix="2"><td>048</td><td>Setanta</td><td>240720T221415Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274301#274301">bb94</a></td></tr>
-<tr d-ix="3"><td>226</td><td>sed 4.2.2 r</td><td>240711T061548Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274071#274071">guest430</a></td></tr>
+<tr d-ix="0"><td>220</td><td>sed 4.2.2 r</td><td>240711T061548Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274071#274071">guest430</a></td></tr>
+<tr d-ix="1"><td>004</td><td>Vyxal 3</td><td>240810T063635Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274879#274879">bb94</a></td></tr>
+<tr d-ix="2"><td>012</td><td>Uiua</td><td>240810T062447Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274877#274877">Joonas</a></td></tr>
+<tr d-ix="3"><td>048</td><td>Setanta</td><td>240720T221415Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274301#274301">bb94</a></td></tr>
 <tr d-ix="4"><td>058</td><td>Kotlin</td><td>211004T182027Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/236007#236007">Seggan</a></td></tr>
 <tr d-ix="5"><td>077</td><td>C#</td><td>240711T125631Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274080#274080">Mayube</a></td></tr>
 <tr d-ix="6"><td>006</td><td>K ngn/k</td><td>220401T190852Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/245872#245872">coltim</a></td></tr>
@@ -110,12 +110,32 @@
 <tr d-ix="81"><td>005</td><td>Husk</td><td>211004T081650Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235966#235966">Dominic </a></td></tr>
 <tr d-ix="82"><td>008</td><td>Charcoal</td><td>211004T081405Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235965#235965">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 4 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <sup><sub><sub><s>291</s> <s>287</s> <s>276</s> <s>260</s> <s>255</s> <s>251</s> <s>248</s> <s>240</s> <s>233</s> <s>228</s> <s>226</s></sub></sub></sup> 220 bytes</h1>
+<pre><code>h;G;G
+:a;s/.\n/\n\n/g;x;s/\n.*//;tc
+:b;x;s/#*/&amp;\n&amp;/;T
+:c;x;s/^#//;tb
+H;g;s/\n(.)/\1/g;T
+s/\n##+\n/&amp;/;ta
+s/^(#+).#.(#*)#/\2\n\2\n\2\r\1/;h;ta
+s/[^\r]*//;h;s/.*/#/;t
+:d;s/#+/&amp;\r&amp;/;T
+:;x;s/^#//;x;td
+s/\r?//g;T
+x;s/\r#//;x;t
+</code></pre>
+<p><a href="https://tio.run/##RZDNbsMgEITv@xorWTZWWHCStgYrPaYPkFuIpSSO7F5IhX1IX77ugvtzADHLDN@I8dbN5mZHOupVfaIMqYdP0tV6s316fqlJ/R4JRkJFNZKdol8R9fNg93YP5sxaOk/O89bbB0vnpSC2XsFc0gAFZc5nZA9grmnSYjRc4M32KZDLgpzm/AGiRCz5NQ5MZ9ZtjmUhUeYoCiRXMWpZgSN2WEzH1oVTxA6xkKDYFUwX6SXTw0L/hz/s1EVWeKWETcXDz81sYi2kpvn7DVR6F/@BmzZSOM1lZCHFjvswqZ8VaKhgDZuv@8f0fvfjvArf" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-4, ~30-45 seconds)</a><br />
+<a href="https://tio.run/##XZBNboMwEIX3c42RIjCKxyZJW2yULtMDZBcHyQkJdEMqYJGq6tVLx9CfKEhGHnve@56nO5WDOdmOdnqe7WmGVME76XSxXD08PmWkfrcEHaGiDMn2oV8RVUNtN3YDxnMtXUOu4V9lr1y6Rgri1iOYw3iAgmaumZHdgjmOJwWGhgO82GoURDImp1m/hVAiJuzGgt5zXUSYxBJlhCJGcimjptWyxNZT065w7T5g6xBIUMgKpgz0hOntRP@HX21fBlb7TCN2DN7@3Ays@tCKv0/yPBVz5ltPef43HK/0OoyFg@dSOB15IWMp1hyPwecQSPFQGR1cCEx4J9464L0D3jpUgwINKSxgCauvy1v/emm6Yd5@Aw" rel="nofollow noreferrer">Try it online! (cases 0-5, ~45-75 seconds; more efficient/less elegant footer)</a></p>
+<p>takes input and output as unary <code>#</code>s. TIO links include conversion to and from decimal in header/footer.</p>
+<p>I'll come back and explain better later, but essentially, I make a loop that multiplies the first line of the PATTERN space by the first line of the HOLD space without killing the rest of the HOLD space. this allows me to store other loop variables and preliminary results on other lines in the HOLD space.</p>
+<p>I finally cleaned up the formatting a bit -- all labels are now at the start of a line, <code>T</code> (in this code) is only used to clear the 'successful swap since last jump?' conditional, and <code>t*</code> jumps to the appropriate label iff a successful swap happened since the last check. it should now be much easier to read even if you don't know much about sed.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 4 bytes</h1>
 <pre><code>ɾ:*Π
 </code></pre>
 <p><a href="https://vyxal.github.io/latest.html#WyIiLCIiLCLJvjoqzqAiLCIiLCI3IiwiMy40LjIiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 12 bytes, 7 characters</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 12 bytes, 7 characters</h1>
 <pre><code>/×ⁿ.+1⇡
 </code></pre>
 <p><a href="https://www.uiua.org/pad?src=0_12_0-rc_1__L8OX4oG_Lisx4oehNAovw5figb8uKzHih6E1Ci_Dl-KBvy4rMeKHoTYKL8OX4oG_Lisx4oehNwo=" rel="nofollow noreferrer">Try it on Uiua Pad!</a></p>
@@ -127,30 +147,10 @@
 /×  // Reducing function: multiplicate each element by the next element on the array
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 48 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 48 bytes</h1>
 <pre><code>gniomh f(n){toradh(n&amp;cmhcht@mata(n,n)*f(n-1))|1}
 </code></pre>
 <p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgICA_PaOCg" rel="nofollow noreferrer">Try on try-setanta.ie</a></p>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <sup><sub><s>291</s> <s>287</s> <s>276</s> <s>260</s> <s>255</s> <s>251</s> <s>248</s> <s>240</s> <s>233</s> <s>228</s></sub></sup> 226 bytes</h1>
-<pre><code>h;G;G
-:a;s/.\n/\n\n/g;x;s/\n.*//;tc
-:b;x;s/#*/&amp;\n&amp;/;T
-:c;x;s/^#//;tb
-H;g;s/\n(.)/\1/g;T
-s/\n##+\n/&amp;/;ta
-s/^(#+).#.(#*)#(.*)/\2\n\2\n\2\3\r\1/;h;ta
-s/[^\r]*//;h;s/.*/#/;t
-:d;s/#+/&amp;\r&amp;/;T
-:;x;s/^#//;x;td
-s/\r?//g;T
-x;s/\r#//;x;t
-</code></pre>
-<p><a href="https://tio.run/##VZBNboMwEIX3c42REBjFY0PaBhulSy6QXRykJETQDYkMi/TydcfQVurCP0/zZt5nT7cumJud6Kg31YkSpB4@SRfl9uX1bVeR@r0STISKKiQ7R78i6sNgG9uAObOWbiQ38tbbJ0s3SkFsvYK5sERBiRsTsgcw18XQIpefdr5Aw0e/tKQyI6d5wgGiRMx5HjfNZ9ZtinkmUaYoMkylYGvBgesqnedGO6zWY@v8KcYPEUxQZAbTRY6cOfzK8Q@ji4n@nZbw5QH@pxJMhEOq679fQaX38T@Yt5bCaUaSmRR7JuKkPijQUEAJ26/7Y/64j1PY@G8" rel="nofollow noreferrer">Try it online! (cases 0-4, ~30-45 seconds)</a><br />
-<a href="https://tio.run/##XVDLTsMwELzvb6xUJY7qtfsAYlfl2B/orW6l9JVySVGSQxHi1wnjBFDBUuyMdnZmdpvTsXMn38jGjvOtjFhKehM7mc7mD49PuZifX6FG2EjO4tvINyJld/ErvyJXAOtQSahwlf4GGCqtBNQDuT0gKxmFaiR@Te7QE3aM8s23e1rhKfuWRKcSLBTWFCFzBj00tQXwLuEs1awTViknWoE6geHwTUONRn8ZqJtdqLfR/hKDKYmZyR1jjgw56iHHnxjH6Fg/S2/eD1B/Vzp0vVuD8yEFtuPOqBayWPwuqTB2GdeD@Autgk0KpVOtlggI43MMZLBcrCCqCLk4Ld8r8H8Fvlco4/QG83SGLE1oSjOaf15f25dr1XTj@gs" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-5, ~45-75 seconds; more efficient/less elegant footer)</a></p>
-<p>takes input and output as unary <code>#</code>s. TIO links include conversion to and from decimal in header/footer.</p>
-<p>I'll come back and explain better later, but essentially, I make a loop that multiplies the first line of the PATTERN space by the first line of the HOLD space without killing the rest of the HOLD space. this allows me to store other loop variables and preliminary results on other lines in the HOLD space.</p>
-<p>I finally cleaned up the formatting a bit -- all labels are now at the start of a line, <code>T</code> (in this code) is only used to clear the 'successful swap since last jump?' conditional, and <code>t?</code> jumps to the appropriate label iff a successful swap happened since the last check. it should now be much easier to read even if you don't know much about sed.</p>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://kotlinlang.org" rel="nofollow noreferrer">Kotlin</a>, <s>59</s> 58 bytes</h1>
 <pre class="lang-kotlin prettyprint-override"><code>fun h(i:Double):Double=if(i&lt;1)1e0else Math.pow(i,i)*h(i-1)
