--- a/q/274854.html
+++ b/q/274854.html
@@ -48,6 +48,19 @@
                 S     Sum
                  %    mod B.
 </code></pre>
+<p>A version which ties with an alternative to repeated division:</p>
+<h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 18 bytes</h1>
+<pre><code>:gɓ’*
+JçU×ḷb§¥ƬṪS%
+</code></pre>
+<p><a href="https://tio.run/##y0rNyan8/98q/eTkRw0ztbi8Di8PPTz94Y7tSYeWH1p6bM3DnauCVf8fXq6vGfn/f3R0tKGOgomOgmGsjqFRrA5XdLS5jqGOkY6xjomOqY6ZjrmOhY6ljqGBjiVcAZADlccUsgAKGUKEIMYSYbKhAXajIeZARIzhIrEA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
+<p><code>ç</code> is used to save 1 byte compared to an excessive combination of quicks in <code>:g¥’*¥@¥</code>:</p>
+<pre><code>:        Divide the indices by
+ g       their GCDs with
+  ɓ’     B - 1
+    *    raised to the power of each index.
+</code></pre>
+<p>No prime factor of any index has a multiplicity greater than that index, so it suffices to exponentiate B - 1 that many times.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>35 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
 <p>A dfn that takes B and N as its left and right arguments, respectively. It outputs zero for true instances and non-zero output for false instances.</p>
