--- a/q/174180.html
+++ b/q/174180.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>008</td><td>Uiua</td><td>240810T045330Z</td><td><a href="https://codegolf.stackexchange.com/questions/174180/string-analyser/274871#274871">ErikDaPa</a></td></tr>
+<tr d-ix="0"><td>020</td><td>Uiua</td><td>240810T045330Z</td><td><a href="https://codegolf.stackexchange.com/questions/174180/string-analyser/274871#274871">ErikDaPa</a></td></tr>
 <tr d-ix="1"><td>068</td><td>JavaScript Node.js</td><td>240809T001656Z</td><td><a href="https://codegolf.stackexchange.com/questions/174180/string-analyser/274827#274827">Andrew B</a></td></tr>
 <tr d-ix="2"><td>016</td><td>Vyxal j</td><td>221013T045641Z</td><td><a href="https://codegolf.stackexchange.com/questions/174180/string-analyser/253139#253139">DialFros</a></td></tr>
 <tr d-ix="3"><td>162</td><td>CSASM v2.2.1.2</td><td>210322T090058Z</td><td><a href="https://codegolf.stackexchange.com/questions/174180/string-analyser/221032#221032">absolute</a></td></tr>
@@ -90,13 +90,15 @@
 <tr d-ix="61"><td>020</td><td>Pyth</td><td>181017T120818Z</td><td><a href="https://codegolf.stackexchange.com/questions/174180/string-analyser/174184#174184">Sok</a></td></tr>
 <tr d-ix="62"><td>041</td><td>Python 3</td><td>181017T120603Z</td><td><a href="https://codegolf.stackexchange.com/questions/174180/string-analyser/174183#174183">Vedant K</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 8 bytes</h1>
-<pre><code>⍚(↯-@@.)
+<div id="pu0" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 20 bytes</h1>
+<pre><code>⍚(↯-@@.)&quot;AWSALILAND&quot;
 </code></pre>
+<p><a href="https://www.uiua.org/pad?src=0_12_0-rc_1__4o2aKOKGry1AQC4pIkFXU0FMSUxBTkQiCg==" rel="nofollow noreferrer">Try this online!</a></p>
 <p><strong>Explanation:</strong></p>
-<pre><code>   -@@.  =&gt; find index in alphabet
-  ↯      =&gt; duplicate letter by index
-⍚(     ) =&gt; unbox each item and then box the results (since they each have different dimensions)
+<pre><code>        &quot;AWSALILAND&quot; =&gt; the string
+   -@@.              =&gt; find index in alphabet
+  ↯                  =&gt; duplicate letter by index
+⍚(     )             =&gt; unbox each item and then box the results (since they each have different dimensions)
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 68 bytes</h1>
