--- a/q/274854.html
+++ b/q/274854.html
@@ -26,12 +26,28 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>103</td><td>Retina</td><td>240811T000621Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274890#274890">Neil</a></td></tr>
-<tr d-ix="1"><td>018</td><td>Jelly</td><td>240809T183703Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274861#274861">Unrelate</a></td></tr>
-<tr d-ix="2"><td>035</td><td>APLDyalog Unicode</td><td>240810T143509Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274887#274887">akamayu</a></td></tr>
-<tr d-ix="3"><td>041</td><td>Charcoal</td><td>240809T235450Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274866#274866">Neil</a></td></tr>
+<tr d-ix="0"><td>082</td><td>JavaScript ES7</td><td>240809T162406Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274857#274857">Arnauld</a></td></tr>
+<tr d-ix="1"><td>103</td><td>Retina</td><td>240811T000621Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274890#274890">Neil</a></td></tr>
+<tr d-ix="2"><td>018</td><td>Jelly</td><td>240809T183703Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274861#274861">Unrelate</a></td></tr>
+<tr d-ix="3"><td>035</td><td>APLDyalog Unicode</td><td>240810T143509Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274887#274887">akamayu</a></td></tr>
+<tr d-ix="4"><td>041</td><td>Charcoal</td><td>240809T235450Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274866#274866">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language" rel="nofollow noreferrer">Retina</a>, 103 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES7), 82 bytes</h1>
+<p>Expects <code>(base)(list)</code>. Returns zero for truthy or non-zero for falsy.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>(b,i=0)=&gt;g=a=&gt;a+a&amp;&amp;(G=(x,y)=&gt;y?G(y,x%y):(i*a.pop()/x-1)%~-b-~g(a))(++i,(b-1)**i)%b
+</code></pre>
+<p><a href="https://tio.run/##pY/NasJAFIX3fYohELk3udGMaf0rY3f1BbqLWUysxpGQCcZKZpNXTyct1B@UFrq6cL7vwLk7eZTVaq/KQ1Do93W7ES2kpESIYp4JKebSl70eLATUZGxmXhZgqHYNzkB5sl/qEnBQBxzdJkiDJgOJCL6vCFIbep5CN21Xuqh0vu7nOgMnftt/HLYmcfD54RxsgA8RYk7skRhPEG/RsUXEhsSiL@2J2IiYDSfEphaF9txpduzUuyHxa2nSSReWsyziV5lXv43/z34e/mXbvQd@nOjbaT8B" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<h3>Method</h3>
+<p>We divide the indices by their GCDs with <span class="math-container">\$b-1\$</span> raised to the power of each index. This trick is borrowed from <a href="https://codegolf.stackexchange.com/a/274861/58563">Unrelated String's answer</a>.</p>
+<p>The digital root is computed with the direct formula (<a href="https://en.wikipedia.org/wiki/Digital_root" rel="nofollow noreferrer">from Wikipedia</a>):</p>
+<p><span class="math-container">$$\operatorname{dr}_b(n)=\begin{cases}
+0&amp;\text{if }n=0\\
+1+((n-1)\bmod(b-1))&amp;\text{if }n\neq0
+\end{cases}$$</span></p>
+<p>Because the sign of <code>%</code> in JS is the sign of the dividend, we actually do not need to handle the <span class="math-container">\$n=0\$</span> case separately.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language" rel="nofollow noreferrer">Retina</a>, 103 bytes</h1>
 <pre><code>\D
 :$&lt;;&amp;$&amp;
 \d+
@@ -73,7 +89,7 @@ r`^\1*;(_+)$
 </code></pre>
 <p>Check whether the base divides the sum.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 18 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 18 bytes</h1>
 <pre><code>J:g¥Ƭ’}ṪU×ḷb§¥ƬṪS%
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8/9/LKv3Q0mNrHjXMrH24c1Xo4ekPd2xPOrQcJAbkB6v@P7xcXzPy///o6GhDHQUTHQXDWB1Do1gdruhocx1DHSMdYx0THVMdMx1zHQsdSx1DAx1LuAIgByqPKWQBFDKECEGMJcJkQwPsRkPMgYgYw0ViAQ" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -105,7 +121,7 @@ JçU×ḷb§¥ƬṪS%
 </code></pre>
 <p>No prime factor of any index has a multiplicity greater than that index, so it suffices to exponentiate B - 1 that many times.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>35 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<div id="pu3" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>35 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
 <p>A dfn that takes B and N as its left and right arguments, respectively. It outputs zero for true instances and non-zero output for false instances.</p>
 <pre><code>{⍺|+⌿⍺(+⌿⊥⍣¯1)⍣≡⍵×(⍺-1)(⊢÷∨)⍣≡⌽⍳≢⍵}
                               ⌽⍳≢⍵  ⍝ Reversed indices of N
@@ -116,7 +132,7 @@ JçU×ḷb§¥ƬṪS%
 </code></pre>
 <p><a href="https://razetime.github.io/APLgolf/?h=C1F41DZBofpRV3P1o95dOuoK6jqPerfW6j/qnXpoBVBEQT1NXQEoogAk2yYBSQ2QIBBDqK2atQA&amp;c=q37Uu6tG@1HPfiCtAaa7lj7qXXxovaEmkHrUufBR79bD0zWAsrqGmhqPuhYd3v6oYwVMrmfvo97NjzoXARXVAgA&amp;f=K1F41DZBIU0hhMvQSKFEwVDBRMEQwjQHcowUjIECpgpmQJ6FgqWCoYGCJVShAUySy9AQmW/B9ahvKtBMdV0CQB3JRgJ2GhqgWQK1FMI1VjAFAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 41 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 41 bytes</h1>
 <pre><code>¬﹪ΣＥθ∧ι⊕﹪⊖×ι⌈Φ⊕Ｅθμ∧¬﹪⁻Ｌθκλ⬤…²η∨﹪λν﹪⊖ην⊖ηη
 </code></pre>
 <p><a href="https://tio.run/##bY5Ba8JAEIX/yh4n8AomVq14EoogdK203kIOS7IkS3cnum5K//12U5VW6MDA8M17b6bulK97ZWPce8OBdn0g2TeD7el9cCTVkU4Qa27IQGy59tppDrq5iZ71LzoYp8@jTqov45J7Y2zQnu5sl0CXZZfUP/ek4eFML5rb0NEp7T9S2x@htfSmuNVUQHQJvPqbyUJwAv98M@o4uxbE/eoKx2EVY1kukKPAFI@YYY4FnrBEPsGyQl5U8eHTfgM" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs a Charcoal boolean, i.e. <code>-</code> if Luhn, nothing if not. Explanation: Mostly doing recursive GCD without having access to recursion or GCD.</p>
