--- a/q/273196.html
+++ b/q/273196.html
@@ -26,18 +26,24 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>093</td><td>Setanta</td><td>240811T071947Z</td><td><a href="https://codegolf.stackexchange.com/questions/273196/hoop-hoop-hoop-hoop-eye-eye-eye-eye/274894#274894">bb94</a></td></tr>
-<tr d-ix="1"><td>018</td><td>05AB1E</td><td>240521T090045Z</td><td><a href="https://codegolf.stackexchange.com/questions/273196/hoop-hoop-hoop-hoop-eye-eye-eye-eye/273213#273213">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>041</td><td>JavaScript Node.js</td><td>240521T005502Z</td><td><a href="https://codegolf.stackexchange.com/questions/273196/hoop-hoop-hoop-hoop-eye-eye-eye-eye/273209#273209">l4m2</a></td></tr>
-<tr d-ix="3"><td>031</td><td>Charcoal</td><td>240520T235644Z</td><td><a href="https://codegolf.stackexchange.com/questions/273196/hoop-hoop-hoop-hoop-eye-eye-eye-eye/273208#273208">Neil</a></td></tr>
-<tr d-ix="4"><td>007</td><td>Jelly</td><td>240520T191228Z</td><td><a href="https://codegolf.stackexchange.com/questions/273196/hoop-hoop-hoop-hoop-eye-eye-eye-eye/273198#273198">Jonathan</a></td></tr>
+<tr d-ix="0"><td>065</td><td>Raku Perl 6 rakudo</td><td>240811T080020Z</td><td><a href="https://codegolf.stackexchange.com/questions/273196/hoop-hoop-hoop-hoop-eye-eye-eye-eye/274895#274895">bb94</a></td></tr>
+<tr d-ix="1"><td>093</td><td>Setanta</td><td>240811T071947Z</td><td><a href="https://codegolf.stackexchange.com/questions/273196/hoop-hoop-hoop-hoop-eye-eye-eye-eye/274894#274894">bb94</a></td></tr>
+<tr d-ix="2"><td>018</td><td>05AB1E</td><td>240521T090045Z</td><td><a href="https://codegolf.stackexchange.com/questions/273196/hoop-hoop-hoop-hoop-eye-eye-eye-eye/273213#273213">Kevin Cr</a></td></tr>
+<tr d-ix="3"><td>041</td><td>JavaScript Node.js</td><td>240521T005502Z</td><td><a href="https://codegolf.stackexchange.com/questions/273196/hoop-hoop-hoop-hoop-eye-eye-eye-eye/273209#273209">l4m2</a></td></tr>
+<tr d-ix="4"><td>031</td><td>Charcoal</td><td>240520T235644Z</td><td><a href="https://codegolf.stackexchange.com/questions/273196/hoop-hoop-hoop-hoop-eye-eye-eye-eye/273208#273208">Neil</a></td></tr>
+<tr d-ix="5"><td>007</td><td>Jelly</td><td>240520T191228Z</td><td><a href="https://codegolf.stackexchange.com/questions/273196/hoop-hoop-hoop-hoop-eye-eye-eye-eye/273198#273198">Jonathan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 93 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, 65 bytes</h1>
+<pre class="lang-perl prettyprint-override"><code>{:2(.&amp;(my&amp;g={$_??g(+^-$_ div 10)~($!+^=1)x+^-$_%10+1!!~($!=0)}))}
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=rdBdToNAEAfwxMQXTjFbV7rLAmHws-JKvIWpsaRJS2Nsg6G2gRB6EV940EPpaRxo1dSPpia-sLP_YX-7mcentH83q153dic5mDFoYw8KzvQ4GaEHHUvwSKEMQh5ZZ764XtyAQBsdy3VdS3YzQX1HtLGdcSale5-M80kyEHQ0o8RB6abD-TCdDuGKGFmudC9wTTHJzZEueBSGYtQ4KAe3c0BPKkH_sFpU5wLVsrdPDYczxrzyZ8c0yVE9h0ewhbMJ2foxf0JUT-MGhMa7NpQvwuJdyD4OK2SsjrUnS_kbsjaQT6SJvxvPs4fYOX25_C-oGxhxkoLwbEAbfBs6VNQb2iHVPtWdJmvC5lO3_AMbDo-OTyQUBsC0n0OLLtcXUMTAo7IVGKsbqmq5vgE" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 93 bytes</h1>
 <pre><code>gniomh(x){m:=1t:=0f:=0nuair-a x{t=f-t x-=1le i idir(0,x%10+1){t+=m f+=m m*=2}x//=10}toradh t}
 </code></pre>
 <p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgICwrLWDCw" rel="nofollow noreferrer">try-setanta.ie link</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>21</s> 18 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>21</s> 18 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>[D_#&lt;T‰`ˆ}TÞ¯R&gt;×JC
 </code></pre>
 <p>Port of <a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer"><em>@Neil</em>'s Charcoal answer</a>, so make sure to upvote that answer as well!<br />
@@ -66,13 +72,13 @@
            # (which is output implicitly as result)
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 41 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 41 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=x=&gt;x?(f(--x/10|0)+(e^=1)&lt;&lt;1+x%10)-e:e=0
 </code></pre>
 <p><a href="https://tio.run/##NY/BbsIwEETv@xW5VLKVmOyu7aAATn@kajHBoFYRQYBQDvx7sA09zWjf7Kz2z9/9tb/8nm/qNO7DPB/c5LrpUxyEUlNN@EBZivDtSG42VE4fhFKFVXA4r7eAheoKBEpCwEk0tEksEVDGhKyBcoSB3pCB/6GBNg@5oUbHBGZgWXNj4t47ZpbWRvjqsUCs87EWjG2WL2uQY9l2cQnnwfdB1OJrX8rEsqmPVSF@Kl/tpOv68XQdh7AYxmP81EvndolUyUs5PwE" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 31 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 31 bytes</h1>
 <pre><code>ＮθＷθ«⊞υ∨﹪θχχ≔÷⊖θχθ»Ｉ⍘⭆⮌υ×§10κι²
 </code></pre>
 <p><a href="https://tio.run/##LY3LDoIwEEXX8hUNqyHBBIyPhSuUDQuUqD9Q6QQaS4E@0MT47bU@Nnfm3tw5U7dU1T0VzhVysOZguysqGKNtcG@5QOJX8gxmldUt2JgcFZQ9s6KHMSZpEn3Fl2eZ1ryRUEiT84kzhBxrhR1Kg8wz/uUP9xVUiksDe6oN7KjGs/G@gd8o6QAnnFBpBOsvLrxDDZkpJMMHhGkSxuTmcx55WUT@t3PL1Xrj5pN4Aw" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -83,7 +89,7 @@
 </code></pre>
 <p>Create a string alternating between <code>1</code>s and <code>0</code>s and convert that from base <code>2</code> to decimal.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 7 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 7 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ḃ⁵Jx$ḂḄ
 </code></pre>
 <p>A monadic Link that accepts a non-negative integer and yields a non-negative integer.</p>
