--- a/q/274854.html
+++ b/q/274854.html
@@ -26,18 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>082</td><td>JavaScript ES7</td><td>240809T162406Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274857#274857">Arnauld</a></td></tr>
+<tr d-ix="0"><td>080</td><td>JavaScript ES7</td><td>240809T162406Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274857#274857">Arnauld</a></td></tr>
 <tr d-ix="1"><td>103</td><td>Retina</td><td>240811T000621Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274890#274890">Neil</a></td></tr>
 <tr d-ix="2"><td>018</td><td>Jelly</td><td>240809T183703Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274861#274861">Unrelate</a></td></tr>
 <tr d-ix="3"><td>035</td><td>APLDyalog Unicode</td><td>240810T143509Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274887#274887">akamayu</a></td></tr>
 <tr d-ix="4"><td>041</td><td>Charcoal</td><td>240809T235450Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274866#274866">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES7), 82 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES7), 80 bytes</h1>
 <p>Expects <code>(base)(list)</code>. Returns zero for truthy or non-zero for falsy.</p>
 
-<pre class="lang-javascript prettyprint-override"><code>(b,i=0)=&gt;g=a=&gt;a+a&amp;&amp;(G=(x,y)=&gt;y?G(y,x%y):(i*a.pop()/x-1)%~-b-~g(a))(++i,(b-1)**i)%b
+<pre class="lang-javascript prettyprint-override"><code>(b,i=!b--)=&gt;g=a=&gt;a+a&amp;&amp;(G=(x,y)=&gt;y?G(y,x%y):(i*a.pop()/x-1)%b-~g(a))(++i,b**i)%~b
 </code></pre>
-<p><a href="https://tio.run/##pY/NasJAFIX3fYohELk3udGMaf0rY3f1BbqLWUysxpGQCcZKZpNXTyct1B@UFrq6cL7vwLk7eZTVaq/KQ1Do93W7ES2kpESIYp4JKebSl70eLATUZGxmXhZgqHYNzkB5sl/qEnBQBxzdJkiDJgOJCL6vCFIbep5CN21Xuqh0vu7nOgMnftt/HLYmcfD54RxsgA8RYk7skRhPEG/RsUXEhsSiL@2J2IiYDSfEphaF9txpduzUuyHxa2nSSReWsyziV5lXv43/z34e/mXbvQd@nOjbaT8B" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##pY/LbsIwEEX3/Qo3UtBMMqaYR4FWprvyA90FFjaP1FUUR4RW8YZfTw1ItCAQSKxGuudc6c6X@lHlbGWKNc/tfFEvZQ2ajHzUnKMcpVLJkYpVowFjCRU5n7m3MTiqQocvYCLVLGwB@FRxgaHmmxQUIsSxIR1FBsONrmc2L222aGY2hSD5WH2vP900wNeH/2AJoo2QCGJdYmKKeI72PSLWJtbZaT1iz8R8OCA29Kjlz4Xmlv31zkjiVBpspSMrmOTJu8rKa@Pv2S9at2y79MDB6eyd@hc" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <h3>Method</h3>
 <p>We divide the indices by their GCDs with <span class="math-container">\$b-1\$</span> raised to the power of each index. This trick is borrowed from <a href="https://codegolf.stackexchange.com/a/274861/58563">Unrelated String's answer</a>.</p>
 <p>The digital root is computed with the direct formula (<a href="https://en.wikipedia.org/wiki/Digital_root" rel="nofollow noreferrer">from Wikipedia</a>):</p>
@@ -46,6 +46,29 @@
 1+((n-1)\bmod(b-1))&amp;\text{if }n\neq0
 \end{cases}$$</span></p>
 <p>Because the sign of <code>%</code> in JS is the sign of the dividend, we actually do not need to handle the <span class="math-container">\$n=0\$</span> case separately.</p>
+<h3>Commented</h3>
+<pre class="lang-javascript prettyprint-override"><code>(                 // outer function taking:
+  b,              //   b = base
+  i = !b--        //   i = index, initialized to 0
+                  //   turn b into b' = b - 1
+) =&gt;              //
+g = a =&gt;          // inner recursive function taking a[]
+a + a &amp;&amp; (        // if a[] is not empty:
+  G = (x, y) =&gt;   //   G is a recursive function taking (x, y)
+  y ?             //   if y is not zero:
+    G(y, x % y)   //     recursive call with x = y, y = x mod y
+  :               //   else:
+    (             //     x is now GCD(x, y)
+      i * a.pop() //     extract the last value from a[] and multiply
+                  //     it by i
+      / x         //     divide by x
+      - 1         //     subtract 1
+    ) % b         //     reduce modulo b'
+    - ~g(a)       //     add 1 + the result of a recursive call to g
+)(++i, b ** i)    //   increment i and process the initial call to G
+                  //   with x = i, y = b' ** i
+% ~b              // reduce the final result modulo the original base
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language" rel="nofollow noreferrer">Retina</a>, 103 bytes</h1>
 <pre><code>\D
